# codeMd

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ReadMe.md
ClassExamProject/: CMakeLists.txt  CMakeUserPresets.json  ReadMe.md
ClassExamProject/airplane/: CMakeLists.txt  CMakeUserPresets.json  resources.qrc
ClassExamProject/airplane/src/: main.cpp
ClassExamProject/airplane/src/games/apple/: GameConfig.cpp  GameConfig.h
ClassExamProject/airplane/src/games/apple/Controller/: GameController.cpp  GameController.h  MenuController.cpp  MenuController.h
ClassExamProject/airplane/src/games/apple/Model/: Fruit.cpp  Fruit.h  GameData.cpp  GameData.h
ClassExamProject/airplane/src/games/apple/View/: GameView.cpp  GameView.h  MenuView.h
ClassExamProject/airplane/src/gui/: MainMenu.h
ClassExamProject/airplane/src/utils/: AsyncLogger.cpp  AsyncLogger.h  AudioSystem.cpp  AudioSystem.h  Tracker.cpp  Tracker.h
Example/: CMakeLists.txt
Example/CppBase/: CMakeLists.txt  kxperson.cpp  kxperson.h  main.cpp
Example/GMockExample/: CMakeLists.txt  foo.h  test.cpp
Example/GtestExample/: CMakeLists.txt  test.cpp
Example/PersonCpp/: CMakeLists.txt  person.cpp  person.h
Example/PersonMain/: CMakeLists.txt  main.cpp
Example/QtChart/: CMakeLists.txt  image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/QtDemo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
LessonCode/: CMakeLists.txt
LessonCode/week01/: CMakeLists.txt
LessonCode/week01/homework/: CMakeLists.txt  ReadMe.md  build.bat
LessonCode/week01/homework/code/: accuracy_test.py  accuracy_test_fast.py  performance_benchmark.py  performance_test.py
LessonCode/week01/homework/data/: text.xlsx
LessonCode/week01/homework/llama/: .gitignore
LessonCode/week01/homework/result/: test_results.xlsx
LessonCode/week01/homework/text/: error_text.xlsx  performance evaluation.csv
LessonCode/week01/practice/: CMakeLists.txt  debug_practice.bat
LessonCode/week01/practice/debug_practice/: CMakeLists.txt  WEEK01学习笔记.md  WEEK01学习笔记.txt  analysis_result.h  codebug.md  globals.cpp  globals.h  name_reader.cpp  name_reader.h  report.cpp  report.h  score_analyzer.cpp  score_reader.cpp  score_reader.h  statistics.cpp  statistics.h  test_cherry-pick.txt
LessonCode/week02/: CMakeLists.txt
LessonCode/week02/homework/: CMakeLists.txt  WEEK02笔记.md  一键启动.bat  技术文档.md
LessonCode/week02/homework/Memory_application_scenarios/: .ignore.txt  CMakeLists.txt  main.cpp
LessonCode/week02/practice/: CMakeLists.txt
LessonCode/week02/practice/memory_pitfalls/: CMakeLists.txt  一键启动.bat  说明文档.md
LessonCode/week02/practice/memory_pitfalls/memory_pitfalls/: CMakeLists.txt  codebug.md  export_out.conf  preview_out.conf  theme.conf
LessonCode/week02/practice/memory_pitfalls/memory_pitfalls/src/: CMakeLists.txt  applyhandler.cpp  applyhandler.h  configview.h  exportcontext.cpp  exportcontext.h  guardalloc.cpp  guardalloc.h  handlerfactory.cpp  handlerfactory.h  legacybridge.cpp  legacybridge.h  main.cpp  previewreader.cpp  previewreader.h  themeconfig.cpp  themeconfig.h  themedisplay.cpp  themedisplay.h  themeloader.cpp  themeloader.h
LessonCode/week03/: CMakeLists.txt
LessonCode/week03/homework/: CMakeLists.txt  一键构建+运行.bat  项目技术文档.md
LessonCode/week03/homework/airplane/: CMakeLists.txt  resources.qrc
LessonCode/week03/homework/airplane/src/games/apple/: AppleGame.cpp  AppleGame.h  AppleSettingsDialog.cpp  AppleSettingsDialog.h
LessonCode/week03/homework/airplane/src/gui/: MainMenu.cpp  MainMenu.h
LessonCode/week03/practice/: CMakeLists.txt  一键编译运行.bat
LessonCode/week03/practice/paint/: CMakeLists.txt  main.cpp
LessonCode/week04/: CMakeLists.txt
LessonCode/week04/homework/: CMakeLists.txt
LessonCode/week04/homework/airplane/: CMakeLists.txt  resources.qrc
LessonCode/week04/homework/airplane/src/: main.cpp
LessonCode/week04/homework/airplane/src/games/airplane/: AirplaneGame.h
LessonCode/week04/homework/airplane/src/games/apple/: GameConfig.h
LessonCode/week04/homework/airplane/src/games/apple/Controller/: GameController.cpp  GameController.h  MenuController.cpp  MenuController.h
LessonCode/week04/homework/airplane/src/games/apple/Model/: Fruit.h  GameData.h
LessonCode/week04/homework/airplane/src/games/apple/View/: GameView.h  MenuView.cpp  MenuView.h
LessonCode/week04/homework/airplane/src/games/apple/include/: IObserver.h
LessonCode/week04/homework/airplane/src/gui/: MainMenu.cpp  MainMenu.h
LessonCode/week04/practice/: CMakeLists.txt
LessonCode/week04/practice/commandPatter/: CMakeLists.txt  main.cpp
LessonCode/week04/practice/factoryPatter1/: CMakeLists.txt  一键.bat
LessonCode/week04/practice/factoryPatter1/src/: main.cpp
LessonCode/week04/practice/factoryPatter2/: CMakeLists.txt
LessonCode/week04/practice/factoryPatter2/src/: main.cpp
LessonCode/week04/practice/factoryPatter3/: CMakeLists.txt
LessonCode/week04/practice/factoryPatter3/src/: main.cpp
LessonCode/week04/practice/observePatter/: CMakeLists.txt  main.cpp
LessonCode/week05/practice/fileCopy/: CMakeLists.txt  FileCopier.cpp  FileCopier.h  MainWindow.cpp  MainWindow.h  main.cpp
md/: week01.md
